[package]
name = "hochzeiger-slopes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_prometheus = "0.1.6"
tokio = { version = "1.23.0", features = ["full"] }
